<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>message_filters_simple_demo</name>
  <version>0.0.0</version>
  <description>A simple_demo to show how to use message filters</description>
  <maintainer email="barry.xu@sony.com">Barry Xu</maintainer>
  <license>Apache License 2.0</license>
  <author>Barry Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
